--- a/frontend/index.html
+++ b/frontend/index.html
@@ -4,6 +4,18 @@
     <meta charset="UTF-8" />
     <link rel="icon" type="image/svg+xml" href="/vite.svg" />
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
+    <meta name="description" content="Take control of subscriptions and spending with subzero." />
+    <meta property="og:type" content="website" />
+    <meta property="og:title" content="subzero" />
+    <meta property="og:description" content="Take control of subscriptions and spending with subzero." />
+    <meta property="og:image" content="/mascot-subzro/mascotwinksmile.webp" />
+    <meta property="og:image:type" content="image/webp" />
+    <meta property="og:image:alt" content="Subzro mascot winking and smiling" />
+    <meta name="twitter:card" content="summary_large_image" />
+    <meta name="twitter:title" content="subzero" />
+    <meta name="twitter:description" content="Take control of subscriptions and spending with subzero." />
+    <meta name="twitter:image" content="/mascot-subzro/mascotwinksmile.webp" />
+    <meta name="twitter:image:alt" content="Subzro mascot winking and smiling" />
     <title>subzero</title>
   </head>
   <body class="h-full text-gray-900">
